// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/molecules/AppModal props persistent falseなら閉じるボタンを表示 1`] = `
<div>
  <transition-stub
    enterclass="opacity-0"
    leavetoclass="opacity-0"
  >
    <div
      class="fixed inset-0 bg-black bg-opacity-75 z-50 translate-opacity duration-300"
      data-testid="overlay"
    >
      <div
        class="position-center bg-white rounded max-w-screen-md max-h-90 p-4"
      >
        <button
          aria-label="close"
          class="inline-flex items-center justify-center whitespace-no-wrap transition-colors duration-300 disabled_opacity-75 disabled_pointer-events-none focus_outline-none absolute top-0 right-0 -mx-4 -my-4 shadow bg-blue-600 text-white hover_bg-blue-700 text-sm px-2 py-1 square-sm rounded-full"
          data-testid="close-button"
          type="button"
        >
          <div>
            <fontawesomeicon-stub
              class="fa-fw"
              data-testid="icon"
              icon="[object Object]"
            />
          </div>
          <div
            class=""
            data-testid="text"
          />
        </button>
        <div
          class="overflow-auto"
          data-testid="content"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`components/molecules/AppModal props persistent trueなら閉じるボタンを表示しない 1`] = `
<div>
  <transition-stub
    enterclass="opacity-0"
    leavetoclass="opacity-0"
  >
    <div
      class="fixed inset-0 bg-black bg-opacity-75 z-50 translate-opacity duration-300"
      data-testid="overlay"
    >
      <div
        class="position-center bg-white rounded max-w-screen-md max-h-90 p-4"
      >
        <!---->
        <div
          class="overflow-auto"
          data-testid="content"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`components/molecules/AppModal props value falseならモーダルを非表示 1`] = `
<div>
  <transition-stub
    enterclass="opacity-0"
    leavetoclass="opacity-0"
  >
    <!---->
  </transition-stub>
</div>
`;

exports[`components/molecules/AppModal props value trueならモーダルを表示 1`] = `
<div>
  <transition-stub
    enterclass="opacity-0"
    leavetoclass="opacity-0"
  >
    <div
      class="fixed inset-0 bg-black bg-opacity-75 z-50 translate-opacity duration-300"
      data-testid="overlay"
    >
      <div
        class="position-center bg-white rounded max-w-screen-md max-h-90 p-4"
      >
        <button
          aria-label="close"
          class="inline-flex items-center justify-center whitespace-no-wrap transition-colors duration-300 disabled_opacity-75 disabled_pointer-events-none focus_outline-none absolute top-0 right-0 -mx-4 -my-4 shadow bg-blue-600 text-white hover_bg-blue-700 text-sm px-2 py-1 square-sm rounded-full"
          data-testid="close-button"
          type="button"
        >
          <div>
            <fontawesomeicon-stub
              class="fa-fw"
              data-testid="icon"
              icon="[object Object]"
            />
          </div>
          <div
            class=""
            data-testid="text"
          />
        </button>
        <div
          class="overflow-auto"
          data-testid="content"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`components/molecules/AppModal renders correctly 1`] = `
<div>
  <transition-stub
    enterclass="opacity-0"
    leavetoclass="opacity-0"
  >
    <div
      class="fixed inset-0 bg-black bg-opacity-75 z-50 translate-opacity duration-300"
      data-testid="overlay"
    >
      <div
        class="position-center bg-white rounded max-w-screen-md max-h-90 p-4"
      >
        <button
          aria-label="close"
          class="inline-flex items-center justify-center whitespace-no-wrap transition-colors duration-300 disabled_opacity-75 disabled_pointer-events-none focus_outline-none absolute top-0 right-0 -mx-4 -my-4 shadow bg-blue-600 text-white hover_bg-blue-700 text-sm px-2 py-1 square-sm rounded-full"
          data-testid="close-button"
          type="button"
        >
          <div>
            <fontawesomeicon-stub
              class="fa-fw"
              data-testid="icon"
              icon="[object Object]"
            />
          </div>
          <div
            class=""
            data-testid="text"
          />
        </button>
        <div
          class="overflow-auto"
          data-testid="content"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;
